# SWARM_PROJECT

./: .clang-format  .gitignore  README.md
drone/: CHANGELOG.rst  CMakeLists.txt  package.xml
drone_bring_up_gazebo/: CMakeLists.txt  package.xml
drone_description/: CMakeLists.txt  package.xml
drone_description/config/: drone_controllers.yaml
drone_description/include/drone_description/: drone_controller.hpp
drone_description/launch/: display_model.launch.py  display_rviz.launch.xml  publish_urdf.launch.py  spawn_drone.launch.xml  spawn_drone_description.py
drone_description/meshes/collisions/: camera_360.stl  camera_joint1.stl  camera_joint2.stl  depth_camera.stl  prop_bl.stl  prop_br.stl  prop_fl.stl  prop_fr.stl
drone_description/meshes/visuals/: camera_360.dae  camera_joint1.dae  camera_joint2.dae  prop_bl.dae  prop_br.dae  prop_fl.dae  prop_fr.dae
drone_description/rviz/: drone_model.rviz
drone_description/src/: drone_controller.cpp  example_velocity.cpp
drone_description/urdf/: drone.urdf  drone.urdf.xacro  drone_gazebo_controllers.xacro  drone_sensor_controllers.xacro  gazebo_materials.xacro  materials_and_colors.xacro  materials_gazebo.xacro
drone_gazebo/: CMakeLists.txt  package.xml
drone_gazebo/launch/: spawn_drone.launch.xml  spawn_drone_description.launch.py  start_world.launch.py
drone_gazebo/models/: model.sdf
drone_gazebo/urdf/: gazebo_materials.xacro
drone_gazebo/worlds/: drone_world.sdf  windy.sdf
drone_gazebo_control/: CMakeLists.txt  package.xml
drone_gazebo_control/config/: drone_controllers.yaml
drone_gazebo_control/include/drone_gazebo_control/: drone_test.hpp
drone_gazebo_control/src/: drone_test.cpp
drone_gazebo_control/urdf/: drone_gazebo_controllers.xacro  drone_sensor_controllers.xacro
drone_gazebo_plugins/: CMakeLists.txt  package.xml
drone_gazebo_plugins/cmake/: FindMAVLink.cmake
drone_gazebo_plugins/include/drone_gazebo_plugins/: channel_plugin.hh  common.hh  gazebo_barometer_plugin.hh  gazebo_gps_plugin.hh  gazebo_magnetometer_plugin.hh  gazebo_mavlink_interface.hh  imu_channel_plugin.hh  mavlink_interface.hh  msgbuffer.hh  rotors_command_plugin.hh
drone_gazebo_plugins/mavlink/include/mavlink/common/: common.h  mavlink.h  version.h
drone_gazebo_plugins/mavlink/include/mavlink/development/: development.h  mavlink.h  version.h
drone_gazebo_plugins/mavlink/include/mavlink/minimal/: mavlink.h  minimal.h  version.h
drone_gazebo_plugins/mavlink/include/mavlink/standard/: mavlink.h  standard.h  version.h
drone_gazebo_plugins/msgs/: MagneticField.proto
drone_gazebo_plugins/src/: channel_plugin.cc  gazebo_barometer_plugin.cpp  gazebo_gps_plugin.cc  gazebo_gps_plugin.cpp  gazebo_magnetometer_plugin.cpp  gazebo_mavlink_interface.cc  gazebo_mavlink_interface.cpp  geo_mag_declination.cc  imu_channel_plugin.cc  mavlink_interface.cc  rotors_command_plugin.cc  rotors_command_plugin.cpp
drone_gazebo_plugins/urdf/: drone_gazebo_plugins.xacro  drone_gazebo_sensors.xacro
drone_msgs/: CMakeLists.txt  package.xml
drone_msgs/msg/: MagneticField.msg  Pressure.msg  SITLGps.msg
install/: local_setup.sh  setup.sh
install/drone_controller/share/drone_controller/: local_setup.sh  package.sh
install/drone_model/share/drone_model/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/drone_model/share/drone_model/cmake/: drone_modelConfig.cmake
install/drone_model/share/drone_model/launch/: display.launch.py  gazebo.launch.py
install/drone_model/share/drone_model/meshes/collisions/: base_link.stl  prop_backwards_left_link.stl  prop_forwards_right_link.stl
install/drone_model/share/drone_model/urdf/: drone_model.urdf  drone_model.xacro
log/: latest_build
src/drone_controller/: CMakeLists.txt  package.xml
src/drone_description/: CMakeLists.txt  package.xml
src/drone_description/config/: model.config
src/drone_description/launch/: display.launch.py  gazebo.launch.py
src/drone_description/meshes/collisions/: camera_360.stl  camera_joint2.stl  prop_br.stl  prop_fr.stl
src/drone_description/meshes/visuals/: camera_joint1.dae  camera_joint2.dae  prop_br.dae  prop_fl.dae
src/drone_description/urdf/: drone.urdf  drone.urdf.xacro  materials_and_colors.xacro
src/drone_description/worlds/: example_world.sdf
src/drone_model/: CMakeLists.txt
src/drone_model/meshes/collisions/: prop_backwards_right_link.stl  prop_forwards_left_link.stl
src/drone_model/meshes/visuals/: base_link.dae  prop_backwards_left_link.dae  prop_backwards_right_link.dae  prop_forwards_left_link.dae  prop_forwards_right_link.dae
src/drone_model/rviz/: drone_model.rviz
