<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_bring_up_gazebo</name>
  <version>1.0.0</version>
  <description>This package contains the launch files to bring up the drone in Gazebo, which means to create a channel to communicate with the drone and the simulation topics.</description>
  <maintainer email="ivan.oroz34@gmail.com">Nidhood</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gz-sim8</depend>
  <depend>gz-common6</depend>
  <depend>gz-math8</depend>
  <depend>gz-plugin2</depend>
  <depend>gz-transport14</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
