<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>This package contains the launch files to bring up the drone in Gazebo, which means to create a channel to communicate with the drone and the simulation topics.</description>
  <maintainer email="ivan.oroz34@gmail.com">nidhood</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>type_description_interfaces</depend>
  <depend>trajectory_msgs</depend>
  <depend>gz-sim8</depend>
  <depend>gz-common5</depend>
  <depend>gz-math7</depend>
  <depend>gz-plugin2</depend>
  <depend>gz-transport13</depend>
  <depend>service_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sdformat14</depend>
  <depend>sdformat-msgs4</depend>
  <depend>drone_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
